# img-ly-example

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
src/: App.cpp  App.h
src/components/: ECSManager.cpp  ECSManager.h  GameManager.cpp  GameManager.h  PlayerController.cpp  PlayerController.h  TextureManager.cpp  TextureManager.h  Window.cpp  Window.h  WindowBackground.cpp  WindowBackground.h
src/components/ECSComponents/: BulletTag.h  Collider.h  DespawnTag.h  ECSComponentsGeneral.h  EnemyTag.h  GunTag.h  PlayerTag.h  Position.h  PositionComp.h  Speed.h  SpeedComp.h  Target.h  TargetPosition.h  Velocity.h  VelocityComp.h  WindowGuard.h  WindowGuardComp.h
src/components/ECSComponents/Tags/: BulletTag.h  DespawnTag.h  EnemyTag.h  GunTag.h  PlayerTag.h
src/components/ECSEntities/: Enemy.cpp  Enemy.h  PlayerCharacter.cpp  PlayerCharacter.h
src/components/ECSSystems/: BulletCollisionSystem.h  CollisionSystem.h  DespawnBulletSystem.h  DespawnEntitiesSystem.h  EnemyCollisionSystem.h  EnemyVelocitySystem.cpp  EnemyVelocitySystem.h  MoveSystem.cpp  MoveSystem.h  SpawnEnemySystem.h  SpriteRenderSystem.h  UpdateEnemyTargetSystem.h  UpdateEnemyVelocitySystem.h  UpdateGunTransformSystem.h  UpdateSpritePositionSystem.cpp  UpdateSpritePositionSystem.h  WindowGuardSystem.cpp  WindowGuardSystem.h
src/components/characters/: Character.cpp  Character.h  Enemy.cpp  Enemy.h  PlayerCharacter.cpp  PlayerCharacter.h
src/components/commands/: Command.h  QuitCommand.cpp  QuitCommand.h
src/components/ui/: Button.cpp  Button.h  Canvas.cpp  Canvas.h  Label.cpp  Label.h  Sprite.cpp  Sprite.h  Widget.cpp  Widget.h
src/components/ui/commands/: ClickUiCommand.cpp  ClickUiCommand.h
src/components/ui/interfaces/: Clickable.cpp  Clickable.h
src/components/ui/menus/: GameHud.cpp  GameHud.h  GameOverMenu.cpp  GameOverMenu.h  MainMenu.cpp  MainMenu.h
src/ui/: Button.cpp  Button.h
src/utils/: Color.h  Singleton.h  Timer.cpp  Timer.h  common.h
